--- a/sections/b.main/5.evaluation/3.perf.tex
+++ b/sections/b.main/5.evaluation/3.perf.tex
@@ -39,7 +39,7 @@ The performance of the axiom weakening based repair algorithm shown in \cref{alg
 \begin{figure}[ht]
   \centering
   \includegraphics[width=\textwidth]{resources/time-ontology-violin.png}
-  \caption{Distribution of (real) execution time required for repairing a single ontology using axiom weakening. The two darkest blue boxes represent (together) half of the samples, with the line in the middle indicating the median. Each lighter boxes each represent half as many samples of the boxes one step darker, and all remaining outliers are marked. Attempts that failed by a timeout or other error were not considered.}
+  \caption{Distribution of (real) execution time required for repairing a single ontology using axiom weakening. The two darkest blue boxes represent (together) half of the samples, with the line in the middle indicating the median. Each lighter box represents half as many samples of the boxes one step darker, and all remaining outliers are marked. Attempts that failed by a timeout or other error were not considered.}
   \label{fig:results-perf-time}
 \end{figure}
 
