--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{libertinus}
 \usepackage[scale = 0.85]{plex-mono}
 \usepackage{censor}
+\usepackage{pdfx}
 \usepackage[maxbibnames=99]{biblatex}
 
 \makeatletter
