Messing around with the slides

--- a/slides.tex
+++ b/slides.tex
@@ -1,10 +1,17 @@
 \documentclass{beamer}
-\usetheme{Copenhagen} 
-\usecolortheme{beaver}
+% \usetheme{Copenhagen} 
+% \usecolortheme{beaver}
+\usefonttheme{serif}
 
-\title{
-    Knowledge Refinement in \\
-    Expressive Description Logics
+\usepackage{graphicx}
+\usepackage[english]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{pdfx, csquotes, xcolor}
+\usepackage{libertinus}
+\usepackage[maxbibnames=99]{biblatex}
+
+\title{\raggedright\huge\bf\textcolor{black}{
+  Knowledge Refinement in Expressive Description Logics}
 }
 \author{Roland Bernard}
 \institute{
@@ -14,16 +21,11 @@
 \date{Thesis defence, July 2023}
 \logo{\includegraphics[width=0.35\linewidth]{resources/unibz-logo.png}}
 
-\usepackage{graphicx}
-\usepackage[english]{babel}
-\usepackage[T1]{fontenc}
-\usepackage{libertinus}
-\usepackage{pdfx}
-\usepackage[maxbibnames=99]{biblatex}
-
 \beamertemplatenavigationsymbolsempty
+\setbeamertemplate{footline}{}
 
 \begin{document}
+
 \frame{\titlepage}
 \logo{}
 
