--- a/slides.tex
+++ b/slides.tex
@@ -83,6 +83,35 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{Motivation and Thesis Goals}
+
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Challenges in Weakening Expressive Description Logics}
+
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Evaluating Axiom Weakening for Ontology Repair}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Evaluation Results}
+
+  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-bar.png}
+\end{frame}
+
+\begin{frame}
+  \frametitle{A Protégé Plugin supporting these Techniques}
+  
+  
+\end{frame}
+
+\begin{frame}
 \frametitle{Outcomes of the Thesis}
 \begin{items}
   \begin{oitem}
@@ -96,6 +125,12 @@
     Developed a Protégé plugin for applying these techniques
   \end{oitem}
 \end{items}
+\end{frame}
+
+\begin{frame}
+\frametitle{Future Outlook}
+
+
 \end{frame}
 
 {
